# SpanishHistoricArchivesTranscriber

./: Dockerfile  docker-compose.yaml
_data/outputs/eb60f87363a36a5ae5cb8373524a8fd976b0cc5f8c40a706c615b857ae0e2974/Instruct_model/: 00000001.docx  00000002.docx
_data/outputs/eb60f87363a36a5ae5cb8373524a8fd976b0cc5f8c40a706c615b857ae0e2974/Salt de linia no especificat/: 00000001.docx  00000001_017.docx  00000002.docx  00000002_017.docx  00000003.docx  00000004.docx  00000005.docx
_data/outputs/eb60f87363a36a5ae5cb8373524a8fd976b0cc5f8c40a706c615b857ae0e2974/Transcripcions_lliçons_model/C1_0018/: 00000001.docx  00000002.docx  00000003.docx  00000004.docx
_data/outputs/eb60f87363a36a5ae5cb8373524a8fd976b0cc5f8c40a706c615b857ae0e2974/Transcripcions_lliçons_model/C2_0004/: 00000001.docx  00000002.docx
_data/outputs/eb60f87363a36a5ae5cb8373524a8fd976b0cc5f8c40a706c615b857ae0e2974/Transcripcions_lliçons_model/C3_0017/: 00000001.docx  00000002.docx
_data/outputs/eb60f87363a36a5ae5cb8373524a8fd976b0cc5f8c40a706c615b857ae0e2974/Transcripcions_lliçons_model/C4_0199/: 00000001.docx  00000002.docx  00000003.docx  00000004.docx  00000005.docx
_data/outputs/eb60f87363a36a5ae5cb8373524a8fd976b0cc5f8c40a706c615b857ae0e2974/Transcripcions_lliçons_model/C5_0028/: 00000001.docx  00000002.docx
algorithm/: pyproject.toml
algorithm/src/: algorithm.py  data.py
algorithm/tests/: test_main.py
