[project]
name = "algorithm"
version = "0.1.0"
description = ""
authors = [{ name = "AgrospAI", email = "agrospai@udl.cat" }]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "ocean-runner>=0.2.31",
    "pytest>=8.3.4,<9",
    "requests==2.32.5",
    "python-docx"
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
